--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   provider: ^6.1.2
   flutter_screenutil: ^5.9.3
   bot_toast: ^4.1.3
+  flutter_dotenv: ^5.2.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
