--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   bot_toast: ^4.1.3
   flutter_dotenv: ^5.2.1
   path: ^1.9.0
+  mobx: ^2.5.0
+  flutter_mobx: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +37,8 @@ dev_dependencies:
   flutter_gen: ^5.8.0
   flutter_lints: ^5.0.0
   flutter_gen_runner: ^5.8.0
-  lint:
+  mobx_codegen: ^2.7.0
+  lints:
 
 flutter:
   uses-material-design: true
